--- a/Курсач2.0/CourseWorkSample.tex
+++ b/Курсач2.0/CourseWorkSample.tex
@@ -4,8 +4,10 @@
 \usepackage{setspace}
 \usepackage{graphicx}
 \usepackage{grffile}
+\usepackage{bigints}
 \graphicspath{}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
+\usepackage[numbered,framed]{mcode}
 %\usepackage{refcheck}
 
 
