--- a/Курсач2.0/chapter2.tex
+++ b/Курсач2.0/chapter2.tex
@@ -1,22 +1,23 @@
-\chapter{Р—Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р°}\label{chap2}
+\usepackage[cp1251]{inputenc}
+\chapter{Задача оптимального экономического роста}\label{chap2}
 
 
-Р’ РґР°РЅРЅРѕР№ РіР»Р°РІРµ РёСЃСЃР»РµРґСѓРµС‚СЃСЏ Р·Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° РІ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ РјРѕРґРµР»Рё СЃ Р»РѕРіР°СЂРёС„РјРёС‡РµСЃРєРѕР№ С„СѓРЅРєС†РёРµР№ РјРіРЅРѕРІРµРЅРЅРѕР№ РїРѕР»РµР·РЅРѕСЃС‚Рё.  Р­С‚Рё Р·Р°РґР°С‡Рё РїСЂРµРґСЃС‚Р°РІР»СЏСЋС‚ РёРЅС‚РµСЂРµСЃ РІ СЃРІСЏР·Рё СЃ С‚РµРј, С‡С‚Рѕ РѕРЅРё РјРѕРіСѓС‚ РІС‹Р±РёСЂР°С‚СЊСЃСЏ РІ РєР°С‡РµСЃС‚РІРµ РїСЂРѕРіРЅРѕР·РёСЂСѓСЋС‰РёС… Р·Р°РґР°С‡ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ РїСЂРё РїСЂРёРјРµРЅРµРЅРёРё С‚РµРѕСЂРёРё РіР»Р°РІС‹ 1 РґР»СЏ СЂРµС€РµРЅРёСЏ Р·Р°РґР°С‡Рё СЂРѕСЃС‚Р°.
+В данной главе исследуется задача оптимального экономического роста в неоклассической модели с логарифмической функцией мгновенной полезности.  Эти задачи представляют интерес в связи с тем, что они могут выбираться в качестве прогнозирующих задач оптимального управления при применении теории главы 1 для решения задачи роста.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{РќРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєР°СЏ РјРѕРґРµР»СЊ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р°}\label{2sec:problem-formulation}
+\section{Неоклассическая модель экономического роста}\label{2sec:problem-formulation}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-РќРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєР°СЏ РјРѕРґРµР»СЊ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° РѕРїРёСЃС‹РІР°РµС‚ Р·Р°РјРєРЅСѓС‚СѓСЋ Р°РіСЂРµРіРёСЂРѕРІР°РЅРЅСѓСЋ СЌРєРѕРЅРѕРјРёРєСѓ, РїСЂРѕРёР·РІРѕРґСЏС‰СѓСЋ РІ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0$ 
-РµРґРёРЅСЃС‚РІРµРЅРЅС‹Р№ РѕРґРЅРѕСЂРѕРґРЅС‹Р№ РїСЂРѕРґСѓРєС‚ (РєР°РїРёС‚Р°Р») СЃРѕ СЃРєРѕСЂРѕСЃС‚СЊСЋ $ Y(t)>0 $. Р’ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t $ РІРµР»РёС‡РёРЅР° $ Y (t) $ СЏРІР»СЏРµС‚СЃСЏ С„СѓРЅРєС†РёРµР№ С‚РµРєСѓС‰РёС… Р·РЅР°С‡РµРЅРёР№ РєР°РїРёС‚Р°Р»Р° $ K(t) > 0 $ Рё С‚СЂСѓРґРѕРІС‹С… СЂРµСЃСѓСЂСЃРѕРІ $ L(t) > 0 $; С‚СЂСѓРґРѕРІС‹Рµ СЂРµСЃСѓСЂСЃС‹ С‚Р°РєР¶Рµ РїСЂРµРґРїРѕР»Р°РіР°СЋС‚СЃСЏ РѕРґРЅРѕСЂРѕРґРЅС‹РјРё. РўР°РєРёРј РѕР±СЂР°Р·РѕРј, \\
+Неоклассическая модель оптимального экономического роста описывает замкнутую агрегированную экономику, производящую в каждый момент времени $ t \ge 0$ 
+единственный однородный продукт (капитал) со скоростью $ Y(t)>0 $. В каждый момент времени $ t $ величина $ Y (t) $ является функцией текущих значений капитала $ K(t) > 0 $ и трудовых ресурсов $ L(t) > 0 $; трудовые ресурсы также предполагаются однородными. Таким образом, \\
 \begin{equation}
-Y (t)=F(K(t),L(t)) \text{ РґР»СЏ Р»СЋР±РѕРіРѕ } t \ge 0. 
+Y (t)=F(K(t),L(t)) \text{ для любого } t \ge 0. 
 \end{equation}
-Р¤СѓРЅРєС†РёСЏ $ F $ РѕР±С‹С‡РЅРѕ РЅР°Р·С‹РІР°РµС‚СЃСЏ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРµР№. РћС‚РЅРѕСЃРёС‚РµР»СЊРЅРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ F $ РїСЂРµРґРїРѕР»Р°РіР°РµС‚СЃСЏ, С‡С‚Рѕ РѕРЅР° РѕРїСЂРµРґРµР»РµРЅР° Рё РЅРµРїСЂРµСЂС‹РІРЅР° РЅР° РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРј РєРІР°РґСЂР°РЅС‚Рµ \\
+Функция $ F $ обычно называется производственной функцией. Относительно производственной функции $ F $ предполагается, что она определена и непрерывна на положительном квадранте \\
 \begin{center}
 	$G ={(K,L) \in \mathbb{R}^2: K>0, L >0},$
 \end{center}
-РґРІР°Р¶РґС‹ РЅРµРїСЂРµСЂС‹РІРЅРѕ РґРёС„С„РµСЂРµРЅС†РёСЂСѓРµРјР° Рё СѓРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ СЃР»РµРґСѓСЋС‰РёРј РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРёРј СѓСЃР»РѕРІРёСЏРј 
-РґР»СЏ РІСЃРµС… K>0, L>0: \\
+дважды непрерывно дифференцируема и удовлетворяет следующим неоклассическим условиям 
+для всех K>0, L>0: \\
 \begin{equation}
 \dfrac{\partial F (K, L)}{\partial K} < 0 \hspace{2cm}  \dfrac{\partial^2 F (K, L)}{\partial K^2} < 0
 \end{equation}
@@ -29,47 +30,47 @@ Y (t)=F(K(t),L(t)) \text{ РґР»СЏ Р»СЋР±РѕРіРѕ } t \ge 0.
 \begin{equation}
 \underset{L \rightarrow +0}{lim} \dfrac{\partial F (K, L)}{\partial L} = \infty \hspace{1cm} \underset{L \rightarrow \infty}{lim} \dfrac{\partial^2 F (K, L)}{\partial L^2} = 0
 \end{equation}
-РќР°РєРѕРЅРµС†, РїСЂРµРґРїРѕР»Р°РіР°РµС‚СЃСЏ, С‡С‚Рѕ $ F $ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ РѕРґРЅРѕСЂРѕРґРЅР° РїРµСЂРІРѕР№ СЃС‚РµРїРµРЅРё, С‚.Рµ. \\
+Наконец, предполагается, что $ F $ положительно однородна первой степени, т.е. \\
 \begin{equation}
-F(\lambda K,\lambda L)=\lambda F(K,L) \hspace{1cm} \text{РґР»СЏ Р»СЋР±С‹С…} \lambda>0, K > 0, L > 0
+F(\lambda K,\lambda L)=\lambda F(K,L) \hspace{1cm} \text{для любых} \lambda>0, K > 0, L > 0
 \end{equation}
-РџРѕСЃР»РµРґРЅРµРµ СѓСЃР»РѕРІРёРµ РѕР·РЅР°С‡Р°РµС‚, С‡С‚Рѕ РѕР±СЉРµРј РїСЂРѕРёР·РІРѕРґСЃС‚РІР° РІ РєР°Р¶РґСѓСЋ РµРґРёРЅРёС†Сѓ РІСЂРµРјРµРЅРё РїСЂСЏРјРѕ РїСЂРѕРїРѕСЂС†РёРѕРЅР°Р»РµРЅ РІРµР»РёС‡РёРЅР°Рј РёРјРµСЋС‰РёС…СЃСЏ РІ СЌС‚Сѓ РµРґРёРЅРёС†Сѓ РІСЂРµРјРµРЅРё РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅС‹С… С„Р°РєС‚РѕСЂРѕРІ. Р’ РєР°С‡РµСЃС‚РІРµ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ F $ РјРѕР¶РµС‚ С„РёРіСѓСЂРёСЂРѕРІР°С‚СЊ, РЅР°РїСЂРёРјРµСЂ, СЃС‚Р°РЅРґР°СЂС‚РЅР°СЏ С„СѓРЅРєС†РёСЏ РљРѕР±Р±Р°-Р”СѓРіР»Р°СЃР° РІРёРґР° \\
+Последнее условие означает, что объем производства в каждую единицу времени прямо пропорционален величинам имеющихся в эту единицу времени производственных факторов. В качестве производственной функции $ F $ может фигурировать, например, стандартная функция Кобба-Дугласа вида \\
 \begin{center}
 	$ F(K,L)=AK^{\alpha_1}L^{\alpha_2} $,
 \end{center}
-РіРґРµ $ A>0, \alpha_1 > 0, \alpha_2 > 0 $ Рё $ \alpha_1 + \alpha_2 =1 $ . \\
-Р—Р°РјРµС‚РёРј, С‡С‚Рѕ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІР° (2.6) РЅРµ РІСЃРµ СѓСЃР»РѕРІРёСЏ РІ (2.2)---(2.5) РЅРµР·Р°РІРёСЃРёРјС‹. Р’ С‡Р°СЃС‚РЅРѕСЃС‚Рё, РІС‚РѕСЂРѕРµ СѓСЃР»РѕРІРёРµ РІ (2.3) СЃР»РµРґСѓРµС‚ РёР· РІС‚РѕСЂРѕРіРѕ СѓСЃР»РѕРІРёСЏ РІ (2.2) Рё (2.6).
+где $ A>0, \alpha_1 > 0, \alpha_2 > 0 $ и $ \alpha_1 + \alpha_2 =1 $ . \\
+Заметим, что в силу равенства (2.6) не все условия в (2.2)---(2.5) независимы. В частности, второе условие в (2.3) следует из второго условия в (2.2) и (2.6).
 
-Р’ Р·Р°РјРєРЅСѓС‚РѕР№ СЌРєРѕРЅРѕРјРёРєРµ РїСЂРѕРёР·РІРµРґРµРЅРЅС‹Р№ РїСЂРѕРґСѓРєС‚ Р»РёР±Рѕ РёРЅРІРµСЃС‚РёСЂСѓРµС‚СЃСЏ РІ РѕСЃРЅРѕРІРЅС‹Рµ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅС‹Рµ С„РѕРЅРґС‹ (РєР°РїРёС‚Р°Р»), Р»РёР±Рѕ РїРѕС‚СЂРµР±Р»СЏРµС‚СЃСЏ. РџСЂРµРґРїРѕР»РѕР¶РёРј, С‡С‚Рѕ РІ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ РјРёРЅРёРјР°Р»СЊРЅРѕ РІРѕР·РјРѕР¶РЅР°СЏ С‡Р°СЃС‚СЊ РїРѕС‚СЂРµР±Р»СЏРµРјРѕРіРѕ РїСЂРѕРґСѓРєС‚Р° РµСЃС‚СЊ $  \varepsilon Y (t) > 0 $, РіРґРµ $ 0 <\varepsilon<1 $ - РЅРµРєРѕС‚РѕСЂР°СЏ РїРѕСЃС‚РѕСЏРЅРЅР°СЏ, Р° РґРѕР»СЏ РїСЂРѕРґСѓРєС‚Р° $ (1 - \varepsilon) Y (t) $ РјРѕР¶РµС‚ Р±С‹С‚СЊ СЂР°СЃРїСЂРµРґРµР»РµРЅР° РјРµР¶РґСѓ РїСЂРѕРёР·РІРѕРґСЃС‚РІРѕРј Рё РїРѕС‚СЂРµР±Р»РµРЅРёРµРј РїСЂРѕРёР·РІРѕР»СЊРЅС‹Рј РѕР±СЂР°Р·РѕРј.
+В замкнутой экономике произведенный продукт либо инвестируется в основные производственные фонды (капитал), либо потребляется. Предположим, что в каждый момент времени $ t \ge 0 $ минимально возможная часть потребляемого продукта есть $  \varepsilon Y (t) > 0 $, где $ 0 <\varepsilon<1 $ - некоторая постоянная, а доля продукта $ (1 - \varepsilon) Y (t) $ может быть распределена между производством и потреблением произвольным образом.
 
-РџСѓСЃС‚СЊ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ С‡Р°СЃС‚СЊ \\
+Пусть в момент времени $ t \ge 0 $ часть \\
 \begin{equation}
 I(t) = u(t)Y (t), 0 \ge u(t) \ge 1-\varepsilon, 
 \end{equation}
-РїСЂРѕРёР·РІРµРґРµРЅРЅРѕРіРѕ РїСЂРѕРґСѓРєС‚Р° РёРЅРІРµСЃС‚РёСЂСѓРµС‚СЃСЏ РІ РѕСЃРЅРѕРІРЅС‹Рµ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅС‹Рµ С„РѕРЅРґС‹, Р° РѕСЃС‚Р°РІС€Р°СЏСЃСЏ С‡Р°СЃС‚СЊ \\
+произведенного продукта инвестируется в основные производственные фонды, а оставшаяся часть \\
 \begin{equation}
 C(t) = (1-u(t))Y (t) 
 \end{equation}
-РїРѕС‚СЂРµР±Р»СЏРµС‚СЃСЏ. Р’ РґР°Р»СЊРЅРµР№С€РµРј РІРµР»РёС‡РёРЅР° $ u(t)\in[0,1-\varepsilon] $ Р±СѓРґРµС‚ С‚СЂР°РєС‚РѕРІР°С‚СЊСЃСЏ РєР°Рє Р·РЅР°С‡РµРЅРёРµ СѓРїСЂР°РІР»РµРЅРёСЏ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t $. 
+потребляется. В дальнейшем величина $ u(t)\in[0,1-\varepsilon] $ будет трактоваться как значение управления в момент времени $ t $. 
 
-Р’ РґР°РЅРЅРѕР№ РјРѕРґРµР»Рё Р°РјРѕСЂС‚РёР·Р°С†РёРё РєР°РїРёС‚Р°Р»Р° РЅРµ РїСЂРµРґРїРѕР»Р°РіР°РµС‚СЃСЏ. РџРѕСЌС‚РѕРјСѓ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІР° (2.7) РґРёРЅР°РјРёРєР° РёР·РјРµРЅРµРЅРёСЏ РєР°РїРёС‚Р°Р»Р° РјРѕР¶РµС‚ Р±С‹С‚СЊ РѕРїРёСЃР°РЅР° РїСЂРё РїРѕРјРѕС‰Рё СЃР»РµРґСѓСЋС‰РµРіРѕ РґРёС„С„РµСЂРµРЅС†РёР°Р»СЊРЅРѕРіРѕ СѓСЂР°РІРЅРµРЅРёСЏ: 
+В данной модели амортизации капитала не предполагается. Поэтому в силу равенства (2.7) динамика изменения капитала может быть описана при помощи следующего дифференциального уравнения: 
 \begin{equation}
 \dot{K}(t)=I(t)=u(t)Y (t). 
 \end{equation}
-РЎС‡РёС‚Р°РµРј, С‡С‚Рѕ РІ РЅР°С‡Р°Р»СЊРЅС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ K(0) = K_0 > 0.  $
+Считаем, что в начальный момент времени $ K(0) = K_0 > 0.  $
 
-РџСѓСЃС‚СЊ С‚СЂСѓРґРѕРІС‹Рµ СЂРµСЃСѓСЂСЃС‹ СѓРґРѕРІР»РµС‚РІРѕСЂСЏСЋС‚ СѓСЃР»РѕРІРёСЋ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅРѕРіРѕ СЂРѕСЃС‚Р°, С‚.Рµ. 
+Пусть трудовые ресурсы удовлетворяют условию экспоненциального роста, т.е. 
 \begin{equation}
 \dot{L}(t)=\mu L(t),
 \end{equation}
-РіРґРµ $ \mu>0 $ --- РЅРµРєРѕС‚РѕСЂР°СЏ РїРѕСЃС‚РѕСЏРЅРЅР°СЏ. РђРЅР°Р»РѕРіРёС‡РЅРѕ Р±СѓРґРµРј СЃС‡РёС‚Р°С‚СЊ, С‡С‚Рѕ $ L(0) = L_0 > 0.  $\\
-РџСѓСЃС‚СЊ $  \rho>0 $ - РїР°СЂР°РјРµС‚СЂ РґРёСЃРєРѕРЅС‚РёСЂРѕРІР°РЅРёСЏ Рё РІ РєР°Р¶РґС‹Р№ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ РјРіРЅРѕРІРµРЅРЅР°СЏ РїРѕР»РµР·РЅРѕСЃС‚СЊ $ g(K(t),L(t),u(t)) $ С‚РµРєСѓС‰РµРіРѕ РїСЂРѕС†РµСЃСЃР° СѓРїСЂР°РІР»РµРЅРёСЏ РµСЃС‚СЊ Р»РѕРіР°СЂРёС„Рј РїРѕР»РЅРѕРіРѕ РїРѕС‚СЂРµР±Р»РµРЅРёСЏ $ C(t) $, С‚.Рµ. (СЃРј. (2.1), (2.8))
+где $ \mu>0 $ --- некоторая постоянная. Аналогично будем считать, что $ L(0) = L_0 > 0.  $\\
+Пусть $  \rho>0 $ - параметр дисконтирования и в каждый момент времени $ t \ge 0 $ мгновенная полезность $ g(K(t),L(t),u(t)) $ текущего процесса управления есть логарифм полного потребления $ C(t) $, т.е. (см. (2.1), (2.8))
 \begin{center}
 	$ 	g(K(t),L(t),u(t)) = \ln C(t) = \ln (1-u(t))+\ln F(K(t),L(t)).  $
 \end{center} 
 
-\section{Р—Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ РґР»СЏ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ РјРѕРґРµР»Рё СЌРєРѕРЅРѕРјРёРєРё c Р»РѕРіР°СЂРёС„РјРёС‡РµСЃРєРѕР№ С„СѓРЅРєС†РёРµР№ РјРіРЅРѕРІРµРЅРЅРѕР№ РїРѕР»РµР·РЅРѕСЃС‚Рё}
-РќРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєР°СЏ РјРѕРґРµР»СЊ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° (c Р»РѕРіР°СЂРёС„РјРёС‡РµСЃРєРѕР№ С„СѓРЅРєС†РёРµР№ РјРіРЅРѕРІРµРЅРЅРѕР№ РїРѕР»РµР·РЅРѕСЃС‚Рё) С„РѕСЂРјСѓР»РёСЂСѓРµС‚СЃСЏ РІ РІРёРґРµ СЃР»РµРґСѓСЋС‰РµР№ Р·Р°РґР°С‡Рё РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ $ (P_\varepsilon), 0 <\varepsilon<1 $: 
+\section{Задача оптимального управления для неоклассической модели экономики c логарифмической функцией мгновенной полезности}
+Неоклассическая модель оптимального экономического роста (c логарифмической функцией мгновенной полезности) формулируется в виде следующей задачи оптимального управления $ (P_\varepsilon), 0 <\varepsilon<1 $: 
 \begin{equation}
 J(K,L,u)= \int_{0}^{\infty}
 e^{-\rho t}[\ln(1-u(t))+\ln F(K(t),L(t))]dt \rightarrow \max.
@@ -80,58 +81,58 @@ e^{-\rho t}[\ln(1-u(t))+\ln F(K(t),L(t))]dt \rightarrow \max.
 	$ K(0) = K_0,L (0) = L_0, $
 \end{center} 
 
-РџСЂРё РёСЃСЃР»РµРґРѕРІР°РЅРёРё РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ Р·Р°РґР°С‡Рё РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ СЂРѕСЃС‚Р° РѕР±С‹С‡РЅРѕ, РёСЃРїРѕР»СЊР·СѓСЏ СѓСЃР»РѕРІРёРµ РѕРґРЅРѕСЂРѕРґРЅРѕСЃС‚Рё (2.6), РїРѕРЅРёР¶Р°СЋС‚ СЂР°Р·РјРµСЂРЅРѕСЃС‚СЊ СЃРёСЃС‚РµРјС‹ Рё РїРµСЂРµС…РѕРґСЏС‚ Рє РІСЃРїРѕРјРѕРіР°С‚РµР»СЊРЅРѕР№ С„Р°Р·РѕРІРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№ $ x = K/L $ (РІРµР»РёС‡РёРЅРµ РєР°РїРёС‚Р°Р»Р°, РїСЂРёС…РѕРґСЏС‰РµРіРѕСЃСЏ РЅР° РµРґРёРЅРёС†Сѓ СЂР°Р±РѕС‡РµР№ СЃРёР»С‹) Рё РѕРґРЅРѕС„Р°РєС‚РѕСЂРЅРѕР№ РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ f $ РІРёРґР° $ f(x)=F(x,1) $, x>0. Р’ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ РІ СЃРёР»Сѓ СѓСЃР»РѕРІРёР№ (2.1) Рё (2.6) РґР»СЏ Р»СЋР±РѕРіРѕ $ t \ge 0 $ 
+При исследовании неоклассической задачи оптимального экономического роста обычно, используя условие однородности (2.6), понижают размерность системы и переходят к вспомогательной фазовой переменной $ x = K/L $ (величине капитала, приходящегося на единицу рабочей силы) и однофакторной производственной функции $ f $ вида $ f(x)=F(x,1) $, x>0. В этом случае в силу условий (2.1) и (2.6) для любого $ t \ge 0 $ 
 \begin{center}
 	$ \dfrac{Y(t)}{L(t)}=
 	\dfrac{1}{L(t)}F(K(t),L(t)) = F \left(\dfrac{K(t)}{L(t)},1\right) = f(x(t)).
 	$
 \end{center} 
-Р¤СѓРЅРєС†РёСЏ $ f $ РѕРїСЂРµРґРµР»РµРЅР° Рё РЅРµРїСЂРµСЂС‹РІРЅР° РЅР° $\tilde{G} = (0 ,\infty$). Р’ СЃРёР»Сѓ СѓСЃР»РѕРІРёР№ (2.2) РґР»СЏ РІСЃРµС… $ x>0  $
+Функция $ f $ определена и непрерывна на $\tilde{G} = (0 ,\infty$). В силу условий (2.2) для всех $ x>0  $
 \begin{equation}
 \frac{d}{dx}f(x) > 0, \hspace{1cm} \frac{d^2}{d^2x}f(x) < 0 
 \end{equation}
-Рё РІСЃР»РµРґСЃС‚РІРёРµ (2.2)-(2.6)
+и вследствие (2.2)-(2.6)
 \begin{equation}
 \underset{x \rightarrow +0}{lim} f(x) = 0 \hspace{0.7cm} \underset{x \rightarrow \infty}{lim} f(x) = \infty \hspace{0.7cm} \underset{x \rightarrow +0}{lim} \frac{d}{dx} f(x) = \infty \hspace{0.7cm} \underset{x \rightarrow \infty}{lim} \frac{d}{dx} f(x) = 0
 \end{equation}
-Р”Р»СЏ РїРµСЂРµРјРµРЅРЅРѕР№ $ x(t)=K(t)/L(t) $ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІ (2.9) Рё (2.10) РёРјРµРµРј
+Для переменной $ x(t)=K(t)/L(t) $ в силу равенств (2.9) и (2.10) имеем
 \begin{center}
 	$ \dot{x}(t)=\dfrac{d}{dt}\dfrac{K(t)}{L(t)} = \dot{K}(t)\dfrac{1}{L(t)} - \dfrac{K(t)}{L^2(t)}\dot{L}(t) = u(t)\dfrac{Y(t)}{L(t)} - \mu \dfrac{K(t)}{L(t)} $
 \end{center}
-РѕС‚РєСѓРґР° РІ СЃРёР»Сѓ РѕРїСЂРµРґРµР»РµРЅРёСЏ РїРµСЂРµРјРµРЅРЅРѕР№ $ x $ Рё СѓСЃР»РѕРІРёР№ (2.1) Рё (2.6) РІС‹С‚РµРєР°РµС‚ СЂР°РІРµРЅСЃС‚РІРѕ
+откуда в силу определения переменной $ x $ и условий (2.1) и (2.6) вытекает равенство
 \begin{center}
 	$\dot{x}(t)=u(t)f(x(t))-\mu x(t).  $
 \end{center}
-Р’РµР»РёС‡РёРЅР° РјРіРЅРѕРІРµРЅРЅРѕРіРѕ РїРѕС‚СЂРµР±Р»РµРЅРёСЏ РЅР° РµРґРёРЅРёС†Сѓ С‚СЂСѓРґРѕРІС‹С… СЂРµСЃСѓСЂСЃРѕРІ РІ РјРѕРјРµРЅС‚ РІСЂРµРјРµРЅРё $ t \ge 0 $ РµСЃС‚СЊ $ c(t)=C(t)/L(t) $. РЎРѕРіР»Р°СЃРЅРѕ (2.1) Рё (2.8) РїРѕР»СѓС‡Р°РµРј 
+Величина мгновенного потребления на единицу трудовых ресурсов в момент времени $ t \ge 0 $ есть $ c(t)=C(t)/L(t) $. Согласно (2.1) и (2.8) получаем 
 \begin{center}
 	$ c(t) = (1-u(t))\dfrac{Y(t)}{L(t)} = (1-u(t))f(x(t)).  $
 \end{center}
 
-Р—Р°РјРµС‚РёРј, С‡С‚Рѕ РІ СЃРёР»Сѓ СЂР°РІРµРЅСЃС‚РІР° (2.10) С‚СЂСѓРґРѕРІС‹Рµ СЂРµСЃСѓСЂСЃС‹ $ L $ РІ СЂР°СЃСЃРјР°С‚СЂРёРІР°РµРјРѕР№ РјРѕРґРµР»Рё РїРѕРґС‡РёРЅСЏСЋС‚СЃСЏ Р·Р°СЂР°РЅРµРµ Р·Р°РґР°РЅРЅРѕР№ РґРёРЅР°РјРёРєРµ. РџРѕСЌС‚РѕРјСѓ РјР°РєСЃРёРјРёР·Р°С†РёСЏ РёРЅС‚РµРіСЂР°Р»СЊРЅРѕРіРѕ С„СѓРЅРєС†РёРѕРЅР°Р»Р° (2.11) СЌРєРІРёРІР°Р»РµРЅС‚РЅР° Р·Р°РґР°С‡Рµ РјР°РєСЃРёРјРёР·Р°С†РёРё С„СѓРЅРєС†РёРѕРЅР°Р»Р°
+Заметим, что в силу равенства (2.10) трудовые ресурсы $ L $ в рассматриваемой модели подчиняются заранее заданной динамике. Поэтому максимизация интегрального функционала (2.11) эквивалентна задаче максимизации функционала
 \begin{center}
 	$ J(x,u)= \int_{0}^{\infty}
 	e^{-\rho t} \ln c(t)dt =
 	\int_{0}^{\infty}
 	e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt,  $
 \end{center}
-С…Р°СЂР°РєС‚РµСЂРёР·СѓСЋС‰РµРіРѕ Р°РіСЂРµРіРёСЂРѕРІР°РЅРЅСѓСЋ СѓРґРµР»СЊРЅСѓСЋ СЃРєРѕСЂРѕСЃС‚СЊ СЂРѕСЃС‚Р° РїРѕС‚СЂРµР±Р»РµРЅРёСЏ РЅР° РµРґРёРЅРёС†Сѓ СЂР°Р±РѕС‡РµР№ СЃРёР»С‹.
+характеризующего агрегированную удельную скорость роста потребления на единицу рабочей силы.
 
-РџСѓСЃС‚СЊ РІ Р·Р°РґР°С‡Рµ $ (P_\varepsilon) $ СЃСѓС‰РµСЃС‚РІСѓРµС‚ РѕРїС‚РёРјР°Р»СЊРЅРѕРµ РґРѕРїСѓСЃС‚РёРјРѕРµ СѓРїСЂР°РІР»РµРЅРёРµ $ u_* $. РўРѕРіРґР° РїСѓСЃС‚СЊ $ (K_*,L_*) $ --- СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ СѓРїСЂР°РІР»РµРЅРёСЋ $ u_* $ РґРѕРїСѓСЃС‚РёРјР°СЏ С‚СЂР°РµРєС‚РѕСЂРёСЏ.
-Р’ СЃРёР»Сѓ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРёС… СѓСЃР»РѕРІРёР№ (2.2)---(2.5) Рё РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕСЃС‚Рё РїСЂРѕРёР·РІРѕРґСЃС‚РІРµРЅРЅРѕР№ С„СѓРЅРєС†РёРё $ F $ РёРјРµРµРј 
+Пусть в задаче $ (P_\varepsilon) $ существует оптимальное допустимое управление $ u_* $. Тогда пусть $ (K_*,L_*) $ --- соответствующая управлению $ u_* $ допустимая траектория.
+В силу неоклассических условий (2.2)---(2.5) и положительности производственной функции $ F $ имеем 
 \begin{center}
-	$ \dfrac{\partial \ln F(R, L)}{\partial K} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial K} > 0$  РґР»СЏ Р»СЋР±С‹С…  $K>0, L > 0 $\\
-	$ \dfrac{\partial \ln F(R, L)}{\partial L} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial L} > 0$  РґР»СЏ Р»СЋР±С‹С…  $K>0, L > 0 $
+	$ \dfrac{\partial \ln F(R, L)}{\partial K} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial K} > 0$  для любых  $K>0, L > 0 $\\
+	$ \dfrac{\partial \ln F(R, L)}{\partial L} = \dfrac{1}{F(K, L)}\dfrac{\partial F(R, L)}{\partial L} > 0$  для любых  $K>0, L > 0 $
 \end{center}
-Р”Р»СЏ РІРµРєС‚РѕСЂР° $ u_0 =1-\varepsilon \in U_\varepsilon $ РїСЂР°РІР°СЏ С‡Р°СЃС‚СЊ СѓРїСЂР°РІР»СЏРµРјРѕР№ СЃРёСЃС‚РµРјС‹ РІ РЅР°С‡Р°Р»СЊРЅРѕР№ С‚РѕС‡РєРµ $ (K_0,L_0) $ РїРѕР»РѕР¶РёС‚РµР»СЊРЅР°. Р’ С‚Р°РєРѕРј СЃР»СѓС‡Р°Рµ, РґР»СЏ Р·Р°РґР°С‡Рё $ (P_\varepsilon) $ РІС‹РїРѕР»РЅСЏРµС‚СЃСЏ С‚РµРѕСЂРµРјР° 10.1 РёР· РїСѓР±Р»РёРєР°С†РёРё РђСЃРµРµРІР° Рё РљСЂСЏР¶РёРјСЃРєРѕРіРѕ [3]. Рљ С‚РѕРјСѓ Р¶Рµ, РјРѕР¶РЅРѕ СѓС‚РІРµСЂР¶РґР°С‚СЊ, С‡С‚Рѕ РѕРїС‚РёРјР°Р»СЊРЅРѕРµ СѓРїСЂР°РІР»РµРЅРёРµ $ u_* $ С‚Р°РєРѕРІРѕ, С‡С‚Рѕ РґР»СЏ РЅРµРєРѕС‚РѕСЂРѕРіРѕ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРіРѕ С‡РёСЃР»Р° $ \theta $ РЅР°С‡РёРЅР°СЏ СЃ РЅРµРєРѕС‚РѕСЂРѕРіРѕ РјРѕРјРµРЅС‚Р° РІСЂРµРјРµРЅРё $ \tau \ge 0 $ РІС‹РїРѕР»РЅСЏРµС‚СЃСЏ РЅРµСЂР°РІРµРЅСЃС‚РІРѕ $ u_* (t) \ge \theta$, С‚Рѕ РґР»СЏ РґР°РЅРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ $ u_* $ РІС‹РїРѕР»РЅСЏСЋС‚СЃСЏ СЃР»РµРґСѓСЋС‰РёРµ СѓСЃР»РѕРІРёСЏ 
+Для вектора $ u_0 =1-\varepsilon \in U_\varepsilon $ правая часть управляемой системы в начальной точке $ (K_0,L_0) $ положительна. В таком случае, для задачи $ (P_\varepsilon) $ выполняется теорема 10.1 из публикации Асеева и Кряжимского [3]. К тому же, можно утверждать, что оптимальное управление $ u_* $ таково, что для некоторого положительного числа $ \theta $ начиная с некоторого момента времени $ \tau \ge 0 $ выполняется неравенство $ u_* (t) \ge \theta$, то для данного управления $ u_* $ выполняются следующие условия 
 \begin{center}
-	$ x_*(t) \ge 0 $ РґР»СЏ Р»СЋР±РѕРіРѕ $ t \ge \tau $\\
-	$ \dfrac{\partial f(x_*(t),u_*(t))}{\partial x} - \theta  I \ge 0 $ РїСЂРё РїРѕС‡С‚Рё РІСЃРµС… $ t \ge \tau ,$
+	$ x_*(t) \ge 0 $ для любого $ t \ge \tau $\\
+	$ \dfrac{\partial f(x_*(t),u_*(t))}{\partial x} - \theta  I \ge 0 $ при почти всех $ t \ge \tau ,$
 \end{center}
-РіРґРµ $ I^- (n\times n) $-РµРґРёРЅРёС‡РЅР°СЏ РґРёР°РіРѕРЅР°Р»СЊРЅР°СЏ РјР°С‚СЂРёС†Р°. РўРѕРіРґР° СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ $ \psi  $, СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РѕРїС‚РёРјР°Р»СЊРЅРѕР№ РїР°СЂРµ $ (x_*,u_*) $ СѓРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ СѓСЃР»РѕРІРёСЋ С‚СЂР°РЅСЃРІРµСЂСЃР°Р»СЊРЅРѕСЃС‚Рё. РЎР»РµРґРѕРІР°С‚РµР»СЊРЅРѕ, РІ СЌС‚РѕРј СЃР»СѓС‡Р°Рµ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РѕРїС‚РёРјР°Р»СЊРЅРѕР№ С‚СЂРѕР№РєРµ $ (K_*,L_*,u_*) $ РІ СЃРёР»Сѓ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РІ РЅРѕСЂРјР°Р»СЊРЅРѕР№ С„РѕСЂРјРµ  СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ $ \psi =( \psi^1,\psi^2) $ СѓРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ СѓСЃР»РѕРІРёСЋ С‚СЂР°РЅСЃРІРµСЂСЃР°Р»СЊРЅРѕСЃС‚Рё. 
+где $ I^- (n\times n) $-единичная диагональная матрица. Тогда сопряженная переменная $ \psi  $, соответствующая оптимальной паре $ (x_*,u_*) $ удовлетворяет условию трансверсальности. Следовательно, в этом случае соответствующая оптимальной тройке $ (K_*,L_*,u_*) $ в силу принципа максимума в нормальной форме  сопряженная переменная $ \psi =( \psi^1,\psi^2) $ удовлетворяет условию трансверсальности. 
 
-РСЃРїРѕР»СЊР·СѓСЏ С‚РµРѕСЂРµРјСѓ 10.1, Рѕ РєРѕС‚РѕСЂРѕР№ С€Р»Р° СЂРµС‡СЊ РІС‹С€Рµ, РІ РїСѓР±Р»РёРєР°С†РёРё [3] РІС‹РІРѕРґРёС‚СЃСЏ РІРёРґРѕРёР·РјРµРЅРµРЅРЅС‹Р№ РїСЂРёРЅС†РёРї РјР°РєСЃРёРјСѓРјР° РџРѕРЅС‚СЂСЏРіРёРЅР°. РћРЅ РґР°СЃС‚ РЅР°Рј СЃРѕРѕС‚РЅРѕС€РµРЅРёСЏ, РєРѕС‚РѕСЂС‹С… Р±СѓРґРµС‚ РІРїРѕР»РЅРµ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РґР»СЏ РѕРґРЅРѕР·РЅР°С‡РЅРѕР№ С…Р°СЂР°РєС‚РµСЂРёР·Р°С†РёРё РІСЃРµС… РѕРїС‚РёРјР°Р»СЊРЅС‹С… СЂРµР¶РёРјРѕРІ РІ Р·Р°РґР°С‡Рµ $ (P_\varepsilon) $. РњС‹ СЂР°СЃСЃРјРѕС‚СЂРёРј Р·Р°РґР°С‡Сѓ $ (P_\varepsilon) $ РїСЂРё РїСЂРѕРёР·РІРѕР»СЊРЅРѕРј РјР°Р»РѕРј РїР°СЂР°РјРµС‚СЂРµ $ \varepsilon>0 $. РџСЂРё СЌС‚РѕРј Р±СѓРґРµС‚ РїРѕРєР°Р·Р°РЅРѕ, С‡С‚Рѕ РґР»СЏ Р»СЋР±РѕРіРѕ РЅР°С‡Р°Р»СЊРЅРѕРіРѕ СЃРѕСЃС‚РѕСЏРЅРёСЏ $ (K_0,L_0) \in G $ РІ СЃР»СѓС‡Р°Рµ, РєРѕРіРґР° РїР°СЂР°РјРµС‚СЂ $ \varepsilon $ РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РјР°Р», Р·РЅР°С‡РµРЅРёРµ СЌС‚РѕРіРѕ РїР°СЂР°РјРµС‚СЂР° $ \varepsilon $ РЅРёРєР°РєРѕРіРѕ РІР»РёСЏРЅРёСЏ РЅР° РѕРїС‚РёРјР°Р»СЊРЅСѓСЋ С‚СЂРѕР№РєСѓ $ (K_*,L_*,u_*) $ РЅРµ РѕРєР°Р·С‹РІР°РµС‚.
+Используя теорему 10.1, о которой шла речь выше, в публикации [3] выводится видоизмененный принцип максимума Понтрягина. Он даст нам соотношения, которых будет вполне достаточно для однозначной характеризации всех оптимальных режимов в задаче $ (P_\varepsilon) $. Мы рассмотрим задачу $ (P_\varepsilon) $ при произвольном малом параметре $ \varepsilon>0 $. При этом будет показано, что для любого начального состояния $ (K_0,L_0) \in G $ в случае, когда параметр $ \varepsilon $ достаточно мал, значение этого параметра $ \varepsilon $ никакого влияния на оптимальную тройку $ (K_*,L_*,u_*) $ не оказывает.
 
-РўР°РєРёРј РѕР±СЂР°Р·РѕРј, РІ С‚РµСЂРјРёРЅР°С… С„Р°Р·РѕРІРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№ x Р·Р°РґР°С‡Р° РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ СѓРїСЂР°РІР»РµРЅРёСЏ ($P_\varepsilon$), $ 0 <\varepsilon<1 $, РїРµСЂРµРїРёСЃС‹РІР°РµС‚СЃСЏ РІ РІРёРґРµ СЃР»РµРґСѓСЋС‰РµР№ Р·Р°РґР°С‡Рё ($\tilde{P}_\varepsilon$):
+Таким образом, в терминах фазовой переменной x задача оптимального управления ($P_\varepsilon$), $ 0 <\varepsilon<1 $, переписывается в виде следующей задачи ($\tilde{P}_\varepsilon$):
 \begin{center}
 	$ J(x,u) = \int_{0}^{\infty}
 	e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max.$\\
@@ -141,74 +142,101 @@ e^{-\rho t}[\ln(1-u(t))+\ln F(K(t),L(t))]dt \rightarrow \max.
 x(0) = x_0,
 \end{equation}
 
-Р—РґРµСЃСЊ $ x_0\in \tilde{G} = {x \in \mathbb{R}^1: x>0} $ Рё $ f(x)=F(x,1) $ РґР»СЏ Р»СЋР±РѕРіРѕ $ x \in \tilde{G}. $ РћСЃС‚Р°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ РІ Р·Р°РґР°С‡Рµ $ (\tilde{P}_\varepsilon) $ С‚Рµ Р¶Рµ СЃР°РјС‹Рµ, С‡С‚Рѕ Рё РІ Р·Р°РґР°С‡Рµ $ ( P_\varepsilon) $.\\
+Здесь $ x_0\in \tilde{G} = {x \in \mathbb{R}^1: x>0} $ и $ f(x)=F(x,1) $ для любого $ x \in \tilde{G}. $ Остальные данные в задаче $ (\tilde{P}_\varepsilon) $ те же самые, что и в задаче $ ( P_\varepsilon) $.\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{РџРѕСЃС‚СЂРѕРµРЅРёРµ РјР°РіРёСЃС‚СЂР°Р»РµР№}
-РњР°РіРёСЃС‚СЂР°Р»СЊСЋ РјС‹ РЅР°Р·С‹РІР°РµРј СЂР°РІРЅРѕРІРµСЃРЅРѕРµ РїРѕР»РѕР¶РµРЅРёРµ СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕР№ СЃРёСЃС‚РµРјС‹. Р”Р»СЏ РµС‘ РІ РґР°РЅРЅРѕР№ Р·Р°РґР°С‡Рµ РјС‹ РґРѕР»Р¶РЅС‹ РїРѕСЃС‚СЂРѕРёС‚СЊ РіР°РјРёР»СЊС‚РѕРЅРѕРІСѓ СЃРёСЃС‚РµРјСѓ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РґР»СЏ $(\tilde{P}_\varepsilon)$. 
+\section{Построение магистралей}
+Магистралью называется равновесное положение экономической системы. Для этой системы в данной задаче следует построить гамильтонову систему принципа максимума для $(\tilde{P}_\varepsilon)$. 
 
-Р’ СЃРёР»Сѓ С‚РµРѕСЂРµРјС‹ 15.2 [3], РїСЂРµРґР»Р°РіР°СЋС‰РµР№ РЅР°Рј РµС‰Рµ РѕРґРёРЅ РІР°СЂРёР°РЅС‚ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РџРѕРЅС‚СЂСЏРіРёРЅР° РІ С‚РµСЂРјРёРЅР°С… СЃРѕРїСЂСЏР¶РµРЅРЅРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№ $ p $, С‚РµРєСѓС‰РµР№ С„СѓРЅРєС†РёРё Р“Р°РјРёР»СЊС‚РѕРЅР°вЂ“
-РџРѕРЅС‚СЂСЏРіРёРЅР° $ \cal{M} $ Рё С‚РµРєСѓС‰РµРіРѕ РіР°РјРёР»СЊС‚РѕРЅРёР°РЅР° $ M $ РґР»СЏ Р»СЋР±РѕРіРѕ $ t \ge 0 $ РёРјРµРµРј $ p(t) > 0 $. РўР°Рє РєР°Рє РІСЃРµ РґРѕРїСѓСЃС‚РёРјС‹Рµ С‚СЂР°РµРєС‚РѕСЂРёРё $ x $
-СѓРїСЂР°РІР»СЏРµРјРѕР№ СЃРёСЃС‚РµРјС‹ $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $ РїРѕР»РѕР¶РёС‚РµР»СЊРЅС‹Рµ, С‚Рѕ Р»СЋР±Р°СЏ РїР°СЂР° $ (x_*,p) $, РіРґРµ $ x_* $ вЂ” РѕРїС‚РёРјР°Р»СЊРЅР°СЏ С‚СЂР°РµРєС‚РѕСЂРёСЏ РІ Р·Р°РґР°С‡Рµ $ (\tilde{P}_\varepsilon) $, Р° $ p $ вЂ” СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РµР№ С‚РµРєСѓС‰Р°СЏ СЃРѕРїСЂСЏР¶РµРЅРЅР°СЏ РїРµСЂРµРјРµРЅРЅР°СЏ, РїСЂРё
-РІСЃРµС… Р·РЅР°С‡РµРЅРёСЏС… $ t \ge 0 $ РїСЂРёРЅРёРјР°РµС‚ Р·РЅР°С‡РµРЅРёСЏ РІ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕРј РєРІР°РґСЂР°РЅС‚Рµ
+В силу теоремы 15.2 [3], предлагающей нам еще один вариант принципа максимума Понтрягина в терминах сопряженной переменной $ p $, текущей функции Гамильтона–
+Понтрягина $ \cal{M} $ и текущего гамильтониана $ M $ для любого $ t \ge 0 $ имеем $ p(t) > 0 $. Так как все допустимые траектории $ x $
+управляемой системы $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $ положительные, то любая пара $ (x_*,p) $, где $ x_* $ — оптимальная траектория в задаче $ (\tilde{P}_\varepsilon) $, а $ p $ — соответствующая ей текущая сопряженная переменная, при
+всех значениях $ t \ge 0 $ принимает значения в положительном квадранте
 \begin{center}
-	Р“$  = {(x,p) \in \mathbb{R}^2 : x > 0, p > 0.} $
+	Г$  = {(x,p) \in \mathbb{R}^2 : x > 0, p > 0.} $
 \end{center}
 
-РџРѕСЃС‚СЂРѕРёРј РіР°РјРёР»СЊС‚РѕРЅРѕРІСѓ СЃРёСЃС‚РµРјСѓ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РґР»СЏ Р·Р°РґР°С‡Рё $(\tilde{P}_\varepsilon)$ РІ РѕС‚РєСЂС‹С‚РѕРј РјРЅРѕР¶РµСЃС‚РІРµ Р“
+Построим гамильтонову систему принципа максимума для задачи $(\tilde{P}_\varepsilon)$ в открытом множестве Г
 
-Р Р°Р·СЂРµС€Р°СЏ СѓСЃР»РѕРІРёРµ РјР°РєСЃРёРјСѓРјР° РѕС‚РЅРѕСЃРёС‚РµР»СЊРЅРѕ СѓРїСЂР°РІР»РµРЅРёСЏ $ u $ РІ РјРЅРѕР¶РµСЃС‚РІРµ Р“, РїРѕР»СѓС‡Р°РµРј, С‡С‚Рѕ РјР°РєСЃРёРјСѓРј РІ С„СѓРЅС†РёРё Р“Р°РјРёР»СЊС‚РѕРЅР°-РџРѕРЅС‚СЂСЏРіРёРЅР° РґРѕСЃС‚РёРіР°РµС‚СЃСЏ РІ С‚РѕС‡РєРµ
+Разрешая условие максимума относительно управления $ u $ в множестве Г, получаем, что максимум в фунции Гамильтона-Понтрягина достигается в точке
 \begin{equation*}
 u(x,p)= 
 \begin{cases}
-0, РµСЃР»Рё 0 < p < \dfrac{1}{f(x)},\\
-1 - \dfrac{1}{f(x)p}, РµСЃР»Рё \dfrac{1}{f(x)} \le p \le \dfrac{1}{\varepsilon f(x)},\\
-1 - \varepsilon, РµСЃР»Рё p > \dfrac{1}{\varepsilon f(x)},
+0, если 0 < p < \dfrac{1}{f(x)},\\
+1 - \dfrac{1}{f(x)p}, если \dfrac{1}{f(x)} \le p \le \dfrac{1}{\varepsilon f(x)},\\
+1 - \varepsilon, если p > \dfrac{1}{\varepsilon f(x)},
 \end{cases}
 \end{equation*}
-Рё РІСЃСЋРґСѓ РІ РјРЅРѕР¶РµСЃС‚РІРµ Р“ РёРјРµРµРј
+и всюду в множестве Г имеем
 \begin{center}
 	$ M(x,p)=(u(x,p)f(x) - \mu x) p + \ln(1 - u(x,p)) + \ln f(x). $
 \end{center}
 
-Р’ СЃРѕРѕС‚РІРµС‚СЃС‚РІРёРё СЃ РІС‹С€РµСѓРєР°Р·Р°РЅРЅС‹Рј СѓСЃР»РѕРІР°РёРµРј РѕРїСЂРµРґРµР»РёРј РјРЅРѕР¶РµСЃС‚РІР° Р“$_1$, Р“$_2$ Рё Р“$_3$:
+В соответствии с вышеуказанным условаием определим множества Г$_1$, Г$_2$ и Г$_3$:
 \begin{center}
-Р“$_1 = {(x,p)\in} $Р“$: 0 < p < \dfrac{1}{f(x)} $, Р“$_2 = {(x,p)\in} $Р“$: \dfrac{1}{f(x)} \le p \ge \dfrac{1}{\varepsilon f(x)} $,\\
-Р“$_3 = {(x,p)\in} $Р“$: p > \dfrac{1}{\varepsilon f(x)} $
+	Г$_1 = {(x,p)\in} $Г$: 0 < p < \dfrac{1}{f(x)} $, Г$_2 = {(x,p)\in} $Г$: \dfrac{1}{f(x)} \le p \ge \dfrac{1}{\varepsilon f(x)} $,\\
+	Г$_3 = {(x,p)\in} $Г$: p > \dfrac{1}{\varepsilon f(x)} $
 \end{center}
 
-Р›РѕРіРёС‡РЅРѕ, С‡С‚Рѕ Р“ = Р“$_1 \cup $Р“$_2 \cup $Р“$_3$
+Логично, что Г = Г$_1 \cup $Г$_2 \cup $Г$_3$
 
-Р’ РјРЅРѕР¶РµСЃС‚РІРµ Р“$_1$ РіР°РјРёР»СЊС‚РѕРЅРѕРІР° СЃРёСЃС‚РµРјР° РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РёРјРµРµС‚ РІРёРґ
+В множестве Г$_1$ гамильтонова система принципа максимума имеет вид
 \begin{equation}
 \dot{x} = -\mu x(t),\\
 \dot{p}(t)=(\rho + \mu)p(t) - \dfrac{1}{f(x(t))} \dfrac{d}{dx}f(x(t)).
 \end{equation}
-РўР°РєРёРј РѕР±СЂР°Р·РѕРј, РІ РјРЅРѕР¶РµСЃС‚РІРµ Р“$_1$ РїРѕР»РѕР¶РµРЅРёР№ СЂР°РІРЅРѕРІРµСЃРёСЏ Сѓ РіР°РјРёР»СЊС‚РѕРЅРѕРІРѕР№ СЃРёСЃС‚РµРјС‹РїСЂРёРЅС†РёРїР°
-РјР°РєСЃРёРјСѓРјР° РЅРµС‚. Р’СЃРµ РµРµ С‚СЂР°РµРєС‚РѕСЂРёРё РёРјРµСЋС‚ РІ СЌС‚РѕРј РјРЅРѕР¶РµСЃС‚РІРµ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅРѕ СѓР±С‹РІР°СЋС‰СѓСЋ
-РєРѕРѕСЂРґРёРЅР°С‚Сѓ $ x $.
-РћРїСЂРµРґРµР»РёРј С„СѓРЅРєС†РёСЋ $ y_1 : (0,\infty) \rightarrow \mathbb{R}^1  $ СЂР°РІРµРЅСЃС‚РІРѕРј
+Таким образом, в множестве Г$_1$ положений равновесия у гамильтоновой системыпринципа
+максимума нет. Все ее траектории имеют в этом множестве экспоненциально убывающую
+координату $ x $.
+Определим функцию $ y_1 : (0,\infty) \rightarrow \mathbb{R}^1  $ равенством
 \begin{center}
-$ y_1(x)=\dfrac{1}{(\rho + \mu)f(x)} \dfrac{d}{dx}f(x) $  РґР»СЏ Р»СЋР±РѕРіРѕ  $ x > 0 $.
+	$ y_1(x)=\dfrac{1}{(\rho + \mu)f(x)} \dfrac{d}{dx}f(x) $  для любого  $ x > 0 $.
 \end{center}
-Р’ СЃРёР»Сѓ РЅРµРѕРєР»Р°СЃСЃРёС‡РµСЃРєРёС… СѓСЃР»РѕРІРёР№ С„СѓРЅРєС†РёСЏ $ y_1 $ РјРѕРЅРѕС‚РѕРЅРЅРѕ СѓР±С‹РІР°РµС‚,
+В силу неоклассических условий функция $ y_1 $ монотонно убывает,
 \begin{center}
-$ y_1(x) \rightarrow \infty $ РїСЂРё $ x \rightarrow 0  $Рё $ y_1(x) \rightarrow 0 $ РїСЂРё $ x \rightarrow \infty $,
+	$ y_1(x) \rightarrow \infty $ при $ x \rightarrow 0  $и $ y_1(x) \rightarrow 0 $ при $ x \rightarrow \infty $,
 \end{center}
-Р° СЂР°РІРµРЅСЃС‚РІРѕ $ y1(x)=1/f(x) $ РІС‹РїРѕР»РЅСЏРµС‚СЃСЏ РІ РµРґРёРЅСЃС‚РІРµРЅРЅРѕР№ С‚РѕС‡РєРµ $ \hat{x} $, СЏРІР»СЏСЋС‰РµР№СЃСЏ РєРѕСЂРЅРµРј СѓСЂР°РІРЅРµРЅРёСЏ
+а равенство $ y1(x)=1/f(x) $ выполняется в единственной точке $ \hat{x} $, являющейся корнем уравнения
 \begin{equation}
 \dfrac{d}{dx}f(x) = \rho + \mu
 \end{equation}
 
-РћРїСЂРµРґРµР»РёРІ РєСЂРёРІС‹Рµ $ V^0_{12}, V^0_{21}, V^0_{22}, V^0_{31}, V^0_{32} $, Р° С‚Р°Рє Р¶Рµ РјРЅРѕР¶РµСЃС‚РІР°, РЅР° РєРѕС‚РѕСЂС‹Рµ РѕРЅРё СЂР°Р·Р±РёРІР°СЋС‚ Р“$_1$, Р“$_2$ Рё Р“$_3$, РјС‹ РјРѕР¶РµРј РїРѕСЃС‚СЂРѕРёС‚СЊ С…Р°СЂР°РєС‚РµСЂ РїРѕРІРµРґРµРЅРёСЏ С‚СЂР°РµРєС‚РѕСЂРёР№ РіР°РјРёР»СЊС‚РѕРЅРѕРІРѕР№ СЃРёСЃС‚РµРјС‹ РїСЂРёРЅС†РёРїР° РјР°РєСЃРёРјСѓРјР° РџРѕРЅС‚СЂСЏРіРёРЅР° РґР»СЏ Р·Р°РґР°С‡Рё  $ (\tilde{P}_\varepsilon) $ [3]:
+Определив кривые $ V^0_{12}, V^0_{21}, V^0_{22}, V^0_{31}, V^0_{32} $, а так же множества, на которые они разбивают Г$_1$, Г$_2$ и Г$_3$, мы можем построить характер поведения траекторий гамильтоновой системы принципа максимума Понтрягина для задачи  $ (\tilde{P}_\varepsilon) $ [3]:
 \begin{center}
 	\includegraphics[width=10cm]{dugi}
 \end{center}
 
-РўРѕС‡РєР° $ (\hat{x}, \hat{p}) $ Р±СѓРґРµС‚ СЃС‡РёС‚Р°С‚СЊСЃСЏ СЂР°РІРЅРѕРІРµСЃРЅРѕР№ РІ РґР°РЅРЅРѕР№ СЃРёСЃС‚РµРјРµ Рё РїСЂРµРЅР°РґР»РµР¶Р°С‚СЊ РјРЅРѕР¶РµСЃС‚РІСѓ Р“$_2$, С‚.Рє. РІСЃРµ С‚СЂР°РµРєС‚РѕСЂРёРё Р“$_1$ РёРјРµСЋС‚ СЌРєСЃРїРѕРЅРµРЅС†РёР°Р»СЊРЅСѓСЋ СѓР±С‹РІР°СЋС‰СѓСЋ РєРѕРѕСЂРґРёРЅР°С‚Сѓ $ x $ (СЃРј. СЂР°СЃС‡РµС‚С‹ РІС‹С€Рµ), Р° РІРѕ РјРЅРѕР¶РµСЃС‚РІРµ Р“$_3$ РїСЂСЏРјР°СЏ $  V^0_{31} $ Рё РєСЂРёРІР°СЏ $ V^0_{32} $ РЅРµ РїРµСЂРµСЃРµРєР°СЋС‚СЃСЏ (СЃРј. СЂРёСЃ.).
+Точка $ (\hat{x}, \hat{p}) $ будет считаться равновесной в данной системе и пренадлежать множеству Г$_2$, т.к. все траектории Г$_1$ имеют экспоненциальную убывающую координату $ x $ (см. расчеты выше), а во множестве Г$_3$ прямая $  V^0_{31} $ и кривая $ V^0_{32} $ не пересекаются (см. рис.).
 
-РЎРѕРѕС‚РІРµС‚СЃС‚РІРµРЅРЅРѕ, РёСЃРїРѕР»СЊР·СѓСЏ (2.16) РґР»СЏ СЂР°СЃСЃС‡РµС‚Р° $ \hat{x} $ Рё С„РѕСЂРјСѓР»Сѓ  $ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $ РјС‹ РїРѕР»СѓС‡Р°РµРј РЅР°С€Сѓ С‚РѕС‡РєСѓ $ (\hat{x}, \hat{p}) $.
-Р§С‚РѕР±С‹ РїРµСЂРµР№С‚Рё Рє РѕРїСЂРµРґРµР»РµРЅРЅС‹Рј РІ РїСЂРµРґС‹РґСѓС‰РµРј РїСѓРЅРєС‚Рµ  $ (x_*, u_*) $ РІРѕСЃРїРѕР»СЊР·СѓРµРјСЃСЏ СЃР»РµРґСѓСЋС‰РёРјРё С„РѕСЂРјСѓР»Р°РјРё:
+Соответственно, используя (2.16) для рассчета $ \hat{x} $ и формулу  $ \hat{p} = \dfrac{1}{f(\hat{x}) - \mu\hat{x}} $ мы получаем нашу точку $ (\hat{x}, \hat{p}) $.
+Чтобы перейти к определенным в предыдущем пункте  $ (x_*, u_*) $ воспользуемся следующими формулами:
 \begin{center}
 	$ x_*(t) \equiv x, u_*(t) =1 - \dfrac{1}{f(\hat{x})\hat{p}}$
 \end{center}
-Рљ РЅРёРј РїРµСЂРµС…РѕРґРёРј РІ СЃРёР»Сѓ СЃР»РµРґСЃС‚РІРёСЏ 15.2 [3], РїРѕ РєРѕС‚РѕСЂРѕРјСѓ РїРѕР»РѕР¶РµРЅРёРµ СЂР°РІРЅРѕРІРµСЃРёСЏ $ (\hat{x}, \hat{p}) $  СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓРµС‚ РѕРїС‚РёРјР°Р»СЊРЅРѕР№ СЃС‚Р°С†РёРѕРЅР°СЂРЅРѕР№ С‚СЂР°РµРєС‚РѕСЂРёРё СЃ РЅР°С‡Р°Р»СЊРЅС‹Рј СѓСЃР»РѕРІРёРµРј $ x_0 = \hat{x} $ РґР»СЏ СѓРїСЂР°РІР»СЏРµРјРѕР№ СЃРёСЃС‚РµРјС‹ $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon] $ РёР· Р·Р°РґР°С‡Рё $(\tilde{P}_\varepsilon)$.
+К ним переходим в силу следствия 15.2 [3], по которому положение равновесия $ (\hat{x}, \hat{p}) $  соответствует оптимальной стационарной траектории с начальным условием $ x_0 = \hat{x} $ для управляемой системы $ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon] $ из задачи $(\tilde{P}_\varepsilon)$.
+\section{Задача оптимального управления для неоклассической модели экономики c логарифмической функцией мгновенной полезности с терминальной стоимостью}
+Метод, изложенный в пункте 2.2 и после использованный для численного эксперимента в пунктах 3.1 --- 3.3 имеет свои недостатки, явно изложенные и показанные при численном эксперименте. Основным, пожалуй, является трудоемкость решения для приблежении к магистрали. Для этого требуется увеличить горизонт до $ T = 90 $, в результате чего возможна ситуация, когда решение данной задачи невозможно построить в реальном времени. 
+
+Недостатки данного метода мы устраним, включив в задачу терминальную стоимость, т.е.
+\begin{equation}
+J(x,u) = W(x(\tau + T)) + \int_{\tau}^{\tau + T}L(x(t),u(t))dt \rightarrow \max.
+\end{equation}
+\begin{center}
+		$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
+		$ x_0 = x(0), t \in [\tau, \tau + T] $
+\end{center}
+Для того, чтобы выбрать подходящую терминальную стоимость W, запишем условия
+оптимальности (условия Каруша-Куна-Таккера) для задачи нелинейного программирования:
+\begin{equation}
+\partial L(x,u)/\partial x + (\partial f(x,u)/\partial x)^T \lambda = 0, \partial L(x,u)/\partial u + (\partial f(x,u)/\partial u)^T \lambda = 0, f(x,u) = 0.
+\end{equation}
+
+Пара $ (x_*, u_*) $ необходимо удовлетворяет условиям вместе с некоторым (оптимальным) множителем Лагранжа $ \lambda_* $.
+
+
+Вернемся теперь к прогнозирующей задаче ОУ. Управление $ u(t) \equiv u_* $, соответствующие ему прямая траектория $ x(t) \equiv x_* $ и сопряженная траектория $ \psi(t) \equiv \lambda_* $, т.е. магистраль,
+является решением гамильтоновой системы принципа максимума
+\begin{equation}
+\dot{\psi} = -(\partial f(x(t),u(t))/\partial x)^T \psi(t) + \partial L(x(t),u(t))/\partial x, \dot{x} = f(x(t),u(t)), t \in [\tau, \tau + T],
+\end{equation}
+при начальном условии $ x(\tau) = x_* $, и условии трансверсальности $ \psi(\tau + T) = -\lambda_* $.
+Для того, чтобы в задаче 2.17 получить условие трансверсальности $ \psi(\tau + T) = -\lambda_* $ , выберем линейную терминальную стоимость $ W(x) = \lambda_*^Tx $. Тогда $ \psi(\tau + T) = -\partial W(x(\tau + T))/\partial x = -\lambda_* $
