--- a/Курсач2.0/chapter1.tex
+++ b/Курсач2.0/chapter1.tex
@@ -1,3 +1,4 @@
+\usepackage[cp1251]{inputenc}
 \chapter{ОБЗОР ЛИТЕРАТУРЫ по теме "Теория управления по прогнозирующей модели"}\label{chap1}
 В данной главе собраны теоритические сведения об управлении по прогнозирующей моделии (далее $ - $ MPC), а так же о его модификации - экономическом MPC. Рассматриваются различные подходы к построению аппроксимирующих задач.
 \section{Теория управления по прогнозирующей модели}\label{MPC}
@@ -14,122 +15,112 @@
 
 \paragraph{Основные принципы MPC}
 \normalsize{
-	Управление по прогнозирующей модели это многомерный управляющий алгоритм, который использует:
+	Управление по прогнозирующей модели это алгоритм управления, который использует:
 	\begin{itemize}
 		\item  внутреннюю динамическую модель процесса;
-		\item функцию затрат $ J $ над сдвигающимся горизонтом;
+		\item функцию стоимости $ J $ над сдвигающимся горизонтом;
 		\item алгоритм оптимизации, минимизирующий функцию стоимости $J$ с использованием управления $ u  $;
 	\end{itemize}
 	
-	Примером нелинейной функции стоимости для оптимизации может служить следующее уравнение
-	$$	
-	J = \sum_{i=1}^{N}\omega_{x_i} (r_i - x_i)^2 + \sum_{i=1}^{N}\omega_{u_i}\bigtriangleup {u_i}^2
-	$$
-	где	
-	\begin{flushleft}
-		$x_i: i-$тая контролируемая переменная \\
-		$r_i: i-$тая эталонная переменная \\
-		$u_i: i-$тая изменяемая переменная \\
-		$\omega_{x_i}-$коэффицент, отражающий важность $x_i$\\
-		$\omega_{u_i}-$коэффицент, тормозящий относительно большие изменения в $u_i$\\
-	\end{flushleft}
-	
 	Из приведенного краткого обзора методов MPC понятно, что их основу составляет решение задач оптимального управления на сдвигающемся горизонте управления с изменяющимся начальным состоянием. Поэтому в следующем разделе опишем основные результаты теории управления.
-\section{Системы управления}\label{MPC}
-
-Рассмотрим нелинейные системы в непрерывном времени следующего вида:
-\begin{equation}
-\dot{x}(t) = f(x(t),u(t),\omega(t)), t \ge 0,
-\end{equation}
-
-где $ x \in X \subseteq \mathbb{R}^n - $ вектор состояния, $ u \in U \subset \mathbb{R}^r - $ вектор управления, $ \omega \in W \subset \mathbb{R}^m - $ вектор возмущений, а $ \dot{x} = dx/dt $. Через $ X $ обозначим множесто допустимых состояний, а через $ U - $ множество допустимых управлений. Вектор возмущений включает в себя неучтённые воздействия на систему, ошибки моделирования и прочие неопределённости, влияющие на систему, и ограничен множеством $ W $. 
-
-В дополнение к нелинейным системам в непрерывном времени, в MPC в данной работе мы рассмотрим и другие модели. В частности, это могут быть нелинейные системы в дискретном времени, полученные дискретизацией систем в непрерывном времени вида (1.1). Дискретный аналог системы, заданной уравнением (1.1), определяется следующим нестационарным разностным уравнением
-\begin{equation}
-x(k + 1) = f_d(x(k), u(k), \omega(k)), k = 0, 1, . . . ,
-\end{equation}
-где $ x, u, и w $ имеют тот же смысл и размерность, что и выше, $ k - $ текущий
-момент времени. Правая часть динамической системы задается функцией $ f_d $,
-где индекс $ d $ используется, чтобы отличать динамику в дискретном времени
-от динамики в непрерывном времени $ f $.
-
-
-Предполагается, что измерение состояния системы возможно в моменты времени$\tau_k = \tau_0 + kh $, где $ h - $ период дискретизации. Таким образом $ k $-ый шаг дискретной системы (1.2) соответствует моменту $ \tau_k $. Чтобы различать непрерывное и дискретное время, обозначение $ t $ будем использовать для непрерывного времени, а $ \tau_k $ и $ k - $ для дискретных моментов для модели в непрерывном времени и для модели в дискретном времени соответственно.
-
-В дальнейшем в работе будут рассматриваться системы с $ \omega(t) \equiv 0 $. Траектория, полученная путём решения уравнения (1.1) при $ \omega(t) \equiv 0 $ для заданного начального состояния $ x(0) = x_0 $ и управления $ u(\cdot) $ называется номинальной и обозначается $ \varphi t|x_0, u(\cdot)), t \ge 0 $. Если $ f(x, u, \omega) $ непрерывно
-дифференцируемая функция своих аргументов, то такая траектория существует и единственна для любого $ t $.
-
-Относительно ограничений на состояние и управление предполагается,
-что x принадлежит множеству $ X \subseteq \mathbb{R}^n $ (то есть множество $ X $ может быть как подмножеством $ \mathbb{R}^n $, так и множеством, равным $ \mathbb{R}^n $).Случай $ X = \mathbb{R}^n $ соответствует задаче без ограничений на состояние $ x $. В то же время предполагается, что управление $ u $ принадлежит множеству $ U \subset \mathbb{R}^r $. Предположение, что $ U $ может быть исключительно подмножеством $ \mathbb{R}^r $ исходит из физических ограничений на механизмы управления.
-
-Множества $ X, U $, как правило, являются множествами простой структуры (шар, параллелепипед, иногда, выпуклый многогранник). Обычно на состояния и управления задаются дополнительные ограничения, следующие из физических ограничений для управляемого объекта, в виде смешанного ограничения
-\begin{equation}
-g(x(t),u(t)) \le 0, \forall t \ge 0.
-\end{equation}
-
-Наконец, предпологается, что возмущения ограничны некоторым подмножеством $ W \subset \mathbb{R}^m $, в свящзи с тем, что для отдельных систем управления устойчивость замкнутого контура доказана для достаточно малых возмущений.
-
-В общем случае устойчивость для системы (1.1) достаточно трудно доказать при неограниченных возмущениях. Обычно считается, что $ W - $ простое множество.
-\section{Методы MPC}\label{MPC}
+	\section{Системы управления}\label{MPC}
 	
-В данном подразделе мы рассмотрим методы MPC для решения задач стабилизации и выделим алгоритм, используемый в этих целях. 
-
-Для измерения качества процесса управления рассматриваемыми системами (1.1) или (1.2) используется функция:
-\begin{center}
-	$ l:\mathbb{R}^n \times \mathbb{R}^r \rightarrow \mathbb{R} $
-\end{center}
-называемая функцией мгновенной стоимости в случае системы (1.1) или стоимости этапа в случае (1.2). Функция $ l $ отражает экономические требования процессу, такие как минимизация расходов или максимизация прибыли.
-
-Устойчивым состоянием называется решение следующей задачи минимизации:
-\begin{equation}
-l(x,u) \rightarrow \underset{x, u}{\min}
-f(x,u,0) = 0,
-g(x,u) \le 0.
-\end{equation}
-Решение данной задачи обозначается $ (x_*,u_*) $.
-
-Не нарушая общности далее предполагается, что устойчивое состояние единственное. Кроме того заменой переменных в системе (1.1) можно добиться $ x_* = 0, u_* = 0 $, то есть точка оптимального устойчивого состояния находится в начале координат.
-
-Во многих задачах целью управления является переход системы как можно ближе к состоянию $ (x_*,u_*) $, т.е. стабилизация этого состояния.
-
-Методы управления с предсказаниями (МРС) достигают этой цели посредством повторяющегося в режиме реального времени решения вспомогательных (они называются прогнозирующими) задач оптимального управления на конечном промежутке $ [\tau_k, \tau_k + \tau_N ]. $ Оптимальное решение прогнозирующей задачи (программное решение) выбирается для управления системой
-на промежутке $ [\tau_k, [\tau_{k+1}) $, после чего строится и решается новая прогнозирующая задача для следующего промежутка.
-
-При $ (x_*, u_*) = (0, 0) $ прогнозирующая задача оптимального управления может быть записана в виде:
-\begin{equation}
-\int_{0}^{\tau_N}(\Vert\varphi(t|x(\tau_k),u(\cdot))\Vert^2_Q + \Vert u(t)\Vert^2_R)dt \rightarrow \underset{u}{min}, \\
-\dot{\varphi}(t|x(\tau_k),u(\cdot)) = f(\varphi(t|x(\tau_k),u(\cdot)), u(t), 0), \\
-g(\varphi(t|x(\tau_k),u(\cdot)), u(t)) \le 0,
-\varphi(t|x(\tau_k),u(\cdot)) \in X, u(t) \in U, \forall t \in [0, \tau_N]. 
-\end{equation}
-
-В критерии качества задачи (1.4) взвешенная норма определяется стандартно: $ \Vert x\Vert^2_Q = x^T Qx, Q > 0 $. Тогда в критерии $ Q $ и $ R $ положительно определённые матрицы, параметры настройки MPC-системы. Они отвечают за баланс между скоростью стабилизации и стоимостью переходного процесса. 
-
-В прогнозирующей задаче (1.4) математическая модель динамической системы совпадает с номинальной системой (1.1) и $ \varphi(t|x(\tau_k),u(\cdot)) $ предсказываемое состояние системы (1.1). Это означает, что, несмотря на наличие возмущений в динамике управляемого объекта, предсказания для него строятся по детерминированной модели. Такой подход соответствует классическим результатам МРС [10] или классическому синтезу оптимальных управлений типа обратной связи в задачах оптимального управления [14].
-
-Начальное состояние номинальной системы задается условием $ x(0) =x(\tau_k) $, где $ x(|tau_k) $ текущее измеренное состояние объекта управления.
-
-Горизонт управления и прогнозирования $ \tau_N > 0 $ конечен. Для эффективного численного решения прогнозирующей задачи оптимального управления (1.4) горизонт должен быть небольшим. С другой стороны, при недостаточ-
-но больших горизонтах управления МРС-регулятор не сможет обеспечить устойчивость замкнутой системы. Оценки для длины горизонта строятся в рамках так называемого безусловного МРС в работе [8].
-
-Существуют различные подходы к модификациям базовой прогнозирующей задачи (1.4), позволяющие стабилизировать систему (1.1) при коротких горизонтах управления, для чего в задачу добавляются дополнительные терминальные ограничения и терминальная стоимость в критерий качества [4,7].
-
-Пусть $ u^0(t|x(tau_k)), t \in [0, \tau_N ], $ оптимальное программное управление в
-задаче (1.4), т.е. такая функция, которая порождает траекторию $  \varphi^0(t|x(\tau_k)) =\varphi(t|x(\tau_k), u0(·)), t \in [0, \tau_N ], $, вместе с которой оно удовлетворяет всем ограничениям задачи и доставляет минимум критерию качества.
-
-Как уже отмечалось выше, алгоритм управления по принципу МРС состоит в том, чтобы решать задачу (1.4) для $ x(\tau_k) $ последовательно для каждого $ k = 0, 1, . . . $. Управление, которое применяется к объекту управления
-значение оптимального программного управления в начальный момент времени, т.е.
-\begin{equation}
-u(t) \equiv u_{MPC}(\tau_k) := u^0(0|x(tau_k)), t \in [\tau_k, \tau_{k+1} ]
-\end{equation}
-Поскольку построенное управление (1.5) зависит от состояния объекта, оно является управлением типа обратной связи, и таким образом, алгоритм МРС обеспечивает управление системой по принципу замкнутого контура.
-
-Суммируя, алгоритм MPC имеет следующие шаги:
-\begin{itemize}
-	\item Положить $ k = 0 $.
-	\item Решить задачу (1.4) для $ x(\tau_k), $ найти $ u^0(\cdot|x(\tau_k)) $
-	\item Подавать на вход объекта управления постоянное управление $ u_MPC(\tau_k) := u^0(0|x(\tau_k))$ до наступления момента $ \tau_{k+1} $.
-	\item Положить $ k:=k+1 $, вернуться к шагу 2.
-\end{itemize}
-Система (1.1) с управлением (1.5) замкнутая система является асимптотически устойчивой при выполнении ряда условий на функцию $ f $, матрицы
-$ Q, R $ и горизонт управления $ \tau_N  $[8] или дополнительных терминальных условия в прогнозирующей задаче оптимального управления [4, 7].
+	Рассмотрим нелинейные системы в непрерывном времени следующего вида:
+	\begin{equation}
+	\dot{x}(t) = f(x(t),u(t),\omega(t)), t \ge 0,
+	\end{equation}
+	где $ x \in X \subseteq \mathbb{R}^n - $ вектор состояния, $ u \in U \subset \mathbb{R}^r - $ вектор управления, $ \omega \in W \subset \mathbb{R}^m - $ вектор возмущений, $ \dot{x} = dx/dt $. Через $ X $ обозначим множесто допустимых состояний, через $ U - $ множество допустимых управлений. Вектор возмущений включает в себя неучтённые воздействия на систему, ошибки моделирования и прочие неопределённости, влияющие на систему, и ограничен множеством $ W $. 
+	
+	В дополнение к нелинейным системам в непрерывном времени, в MPC в данной работе мы рассмотрим и другие модели. В частности, это могут быть нелинейные системы в дискретном времени, полученные дискретизацией систем в непрерывном времени вида (1.1). Дискретный аналог системы, заданной уравнением (1.1), определяется следующим нестационарным разностным уравнением
+	\begin{equation}
+	x(k + 1) = f_d(x(k), u(k), \omega(k)), k = 0, 1, . . . ,
+	\end{equation}
+	где $ x, u, и w $ имеют тот же смысл и размерность, что и выше, $ k $ --- текущий
+	момент времени. Правая часть динамической системы задается функцией $ f_d $,
+	где индекс $ d $ используется, чтобы отличать динамику в дискретном времени
+	от динамики в непрерывном времени $ f $.
+	
+	
+	Предполагается, что измерение состояния системы возможно в моменты времени $\tau_k = \tau_0 + kh $, где $ h $ --- период дискретизации. Таким образом $ k $-ый шаг дискретной системы (1.2) соответствует моменту $ \tau_k $. Чтобы различать непрерывное и дискретное время, обозначение $ t $ будем использовать для непрерывного времени, а $ \tau_k $ и $ k $ --- для дискретных моментов для модели в непрерывном времени и для модели в дискретном времени, соответственно.
+	
+	В дальнейшем в работе будут рассматриваться системы с $ \omega(t) \equiv 0 $. Траектория, полученная путём решения уравнения (1.1) при $ \omega(t) \equiv 0 $ для заданного начального состояния $ x(0) = x_0 $ и управления $ u(\cdot) $ называется номинальной и обозначается $ \varphi (t|x_0, u(\cdot)), t \ge 0 $. Если $ f(x, u, \omega) $ непрерывно
+	дифференцируемая функция своих аргументов, то такая траектория существует и единственна для любого $ t $.
+	
+	Относительно ограничений на состояние и управление предполагается,
+	что x принадлежит множеству $ X \subseteq \mathbb{R}^n $ (то есть множество $ X $ может быть как подмножеством $ \mathbb{R}^n $, так и множеством, равным $ \mathbb{R}^n $). Случай $ X = \mathbb{R}^n $ соответствует задаче без ограничений на состояние $ x $. В то же время предполагается, что управление $ u $ принадлежит множеству $ U \subset \mathbb{R}^r $. Предположение, что $ U $ может быть исключительно подмножеством $ \mathbb{R}^r $ исходит из физических ограничений на механизмы управления.
+	
+	Множества $ X, U $, как правило, являются множествами простой структуры (шар, параллелепипед, иногда, выпуклый многогранник). Обычно на состояния и управления задаются дополнительные ограничения, следующие из физических ограничений для управляемого объекта, в виде смешанного ограничения
+	\begin{equation}
+	g(x(t),u(t)) \le 0  \forall t \ge 0.
+	\end{equation}
+	
+	Наконец, предпологается, что возмущения ограничны некоторым подмножеством $ W \subset \mathbb{R}^m $, в связи с тем, что для отдельных систем управления устойчивость замкнутого контура доказана для достаточно малых возмущений.
+	
+	В общем случае устойчивость для системы (1.1) достаточно трудно доказать при неограниченных возмущениях. Обычно считается, что $ W - $ простое множество.
+	\section{Методы MPC}\label{MPC}
+	
+	В данном подразделе мы рассмотрим методы MPC для решения задач стабилизации и приведем алгоритм, используемый в этих целях. 
+	
+	Для измерения качества процесса управления рассматриваемыми системами (1.1) или (1.2) используется функция:
+	\begin{center}
+		$ l:\mathbb{R}^n \times \mathbb{R}^r \rightarrow \mathbb{R} $
+	\end{center}
+	называемая функцией мгновенной стоимости в случае системы (1.1) или стоимости этапа в случае (1.2). Функция $ l $ отражает экономические требования процессу, такие как минимизация расходов или максимизация прибыли.
+	
+	Устойчивым состоянием называется решение следующей задачи минимизации:
+	\begin{equation}
+	l(x,u) \rightarrow \underset{x, u}{\min}
+	f(x,u,0) = 0,
+	g(x,u) \le 0.
+	\end{equation}
+	Решение данной задачи обозначается $ (x_*,u_*) $.
+	
+	Не нарушая общности далее предполагается, что устойчивое состояние единственное. Кроме того заменой переменных в системе (1.1) можно добиться $ x_* = 0, u_* = 0 $, то есть точка оптимального устойчивого состояния находится в начале координат.
+	
+	Во многих задачах целью управления является переход системы как можно ближе к состоянию $ (x_*,u_*) $, т.е. стабилизация этого состояния.
+	
+	Методы управления по прогнозирующей модели (МРС) достигают этой цели посредством повторяющегося в режиме реального времени решения вспомогательных (они называются прогнозирующими) задач оптимального управления на конечном промежутке $ [\tau_k, \tau_k + \tau_N ]. $ Оптимальное решение прогнозирующей задачи (программное решение) выбирается для управления системой
+	на промежутке $ [\tau_k, [\tau_{k+1}) $, после чего строится и решается новая прогнозирующая задача для следующего промежутка.
+	
+	При $ (x_*, u_*) = (0, 0) $ прогнозирующая задача оптимального управления может быть записана в виде:
+	\begin{center}
+	$ \int_{0}^{\tau_N}(\Vert\varphi(t|x(\tau_k),u(\cdot))\Vert^2_Q + \Vert u(t)\Vert^2_R)dt \rightarrow \underset{u}{min}, $
+	\end{center}
+	\begin{equation}
+	\dot{\varphi}(t|x(\tau_k),u(\cdot)) = f(\varphi(t|x(\tau_k),u(\cdot)), u(t), 0),
+    \end{equation}
+    \begin{center}
+	$ g(\varphi(t|x(\tau_k),u(\cdot)), u(t)) \le 0, $ \\
+	$ \varphi(t|x(\tau_k),u(\cdot)) \in X, u(t) \in U, \forall t \in [0, \tau_N].  $
+	\end{center}
+	
+	В критерии качества задачи (1.4) взвешенная норма определяется стандартно: $ \Vert x\Vert^2_Q = x^T Qx, Q > 0 $. Тогда в критерии $ Q $ и $ R $ положительно определённые матрицы, параметры настройки MPC-системы. Они отвечают за баланс между скоростью стабилизации и стоимостью переходного процесса. 
+	
+	В прогнозирующей задаче (1.4) математическая модель динамической системы совпадает с номинальной системой (1.1) и $ \varphi(t|x(\tau_k),u(\cdot)) $ предсказываемое состояние системы (1.1). Это означает, что, несмотря на наличие возмущений в динамике управляемого объекта, предсказания для него строятся по детерминированной модели. Такой подход соответствует классическим результатам МРС [10] или классическому синтезу оптимальных управлений типа обратной связи в задачах оптимального управления [14].
+	
+	Начальное состояние номинальной системы задается условием $ x(0) = x(\tau_k) $, где $ x(|tau_k) $ текущее измеренное состояние объекта управления.
+	
+	Горизонт управления и прогнозирования $ \tau_N > 0 $ конечен. Для эффективного численного решения прогнозирующей задачи оптимального управления (1.4) горизонт должен быть небольшим. С другой стороны, при недостаточ-
+	но больших горизонтах управления МРС-регулятор не сможет обеспечить устойчивость замкнутой системы. Оценки для длины горизонта строятся в рамках так называемого безусловного МРС в работе [8].
+	
+	Существуют различные подходы к модификациям базовой прогнозирующей задачи (1.4), позволяющие стабилизировать систему (1.1) при коротких горизонтах управления, для чего в задачу добавляются дополнительные терминальные ограничения и терминальная стоимость в критерий качества [4,7].
+	
+	Пусть $ u^0(t|x(\tau_k)), t \in [0, \tau_N ], $ оптимальное программное управление в
+	задаче (1.4), т.е. такая функция, которая порождает траекторию $  \varphi^0(t|x(\tau_k)) =\varphi(t|x(\tau_k), u_0(\cdot)), t \in [0, \tau_N ]$, вместе с которой оно удовлетворяет всем ограничениям задачи и доставляет минимум критерию качества.
+	
+	Как уже отмечалось выше, алгоритм управления по принципу МРС состоит в том, чтобы решать задачу (1.4) для $ x(\tau_k) $ последовательно для каждого $ k = 0, 1, . . . $. Управление, которое применяется к объекту управления
+	значение оптимального программного управления в начальный момент времени, т.е.
+	\begin{equation}
+	u(t) \equiv u_{MPC}(\tau_k) := u^0(0|x(\tau_k)), t \in [\tau_k, \tau_{k+1} ]
+	\end{equation}
+	Поскольку построенное управление (1.5) зависит от состояния объекта, оно является управлением типа обратной связи, и таким образом, алгоритм МРС обеспечивает управление системой по принципу замкнутого контура.
+	
+	Суммируя, алгоритм MPC имеет следующие шаги:
+	\begin{itemize}
+		\item Положить $ k = 0 $.
+		\item Решить задачу (1.4) для $ x(\tau_k), $ найти $ u^0(\cdot|x(\tau_k)) $
+		\item Подавать на вход объекта управления постоянное управление $ u_{MPC}(\tau_k) := u^0(0|x(\tau_k))$ до наступления момента $ \tau_{k+1} $.
+		\item Положить $ k:=k+1 $, вернуться к шагу 2.
+	\end{itemize}
+	Система (1.1) с управлением (1.5) замкнутая система является асимптотически устойчивой при выполнении ряда условий на функцию $ f $, матрицы
+	$ Q, R $ и горизонт управления $ \tau_N  $[8] или дополнительных терминальных условия в прогнозирующей задаче оптимального управления [4, 7].
