--- a/Курсач2.0/chapter3.tex
+++ b/Курсач2.0/chapter3.tex
@@ -1,17 +1,17 @@
+\usepackage[cp1251]{inputenc}
 \chapter{Численные эксперименты}
-\section{Применение метода MPC к решению задачи об экономическом росте}
-\hfill\break
+\section{Применение метода MPC к решению базовой задачи об экономическом росте}
 Рассмотрим задачу (2.14).
 \begin{center}
-$ J(x,u) = \int_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max.$\\
-$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
-$ x(0) = x_0, x \ge 0$\\
+	$ J(x,u) = \bigint_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max.$\\
+	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
+	$ x(0) = x_0, x \ge 0$\\
 \end{center}
 
 Цель данной главы применить методы решения ЗОУ для решения данной задачи.
-Для решения задачи воспользуемся алгоритмом, который был указан в пунтке 1.3. Рассматривать будем прогнозирующую задачу Лагранжа(п. 1.2), т.е.
+Для решения задачи воспользуемся алгоритмом, который был указан в пунтке 1.3. Рассматривать будем прогнозирующую задачу Лагранжа, т.е.
 \begin{center}
-	$ J(x,u) = \int_{0}^{z} e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt $
+	$ J(x,u) =  \bigint_{0}^{z} e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt $
 \end{center}
 Решение задачи будем искать численно в классе кусочно-постоянных функций, то есть
 \begin{center}
@@ -26,44 +26,44 @@ $ x(0) = x_0, x \ge 0$\\
 В таком случае критерий качества нашей задачи имеет следующий вид:
 \begin{center}
 	\begin{doublespace}
-		$ J(x,u) = \sum_{i=0}^{T-1}\int_{ih}^{(i+1)h} e^{-\rho t}[\ln(1-u_i)+\ln f(x_i)]dt =$ \\  $ \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$
+		$ J(x,u) = \sum_{i=0}^{T-1}\bigint_{ih}^{(i+1)h} e^{-\rho t}[\ln(1-u_i)+\ln f(x_i)]dt =$ \\  $ \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$
 	\end{doublespace}
 \end{center}
 В итоге мы получаем следующую дискретизированую задачу:
 \begin{center}
 	\begin{doublespace}
-	$ x_{i+1} = u_i f(x_i)-\mu x_i, u_i\in U_\varepsilon = [0 ,1-\varepsilon], x(0) = x_0, x_i \ge 0$\\
-	$ J(x,u) = \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$
+		$ x_{i+1} = u_i f(x_i)-\mu x_i, u_i\in U_\varepsilon = [0 ,1-\varepsilon], x(0) = x_0, x_i \ge 0$\\
+		$ J(x,u) = \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right)$
 	\end{doublespace}
 \end{center}
 
 Таким образом, задача оптимального управления в классе дискретных управляющих воздействий свелась к задаче нелинейного прогаммирования. Для ее численного решения существует ряд реализованных программно процедур, в частности, в рамках курсовой работы будет использвоаться стандартная процедура fminsearch пакета Matlab.
 
 В качестве производственной функции мы рассматриваем:
- \begin{center}
- 	$ f(x) = x^\alpha $
- \end{center}
+\begin{center}
+	$ f(x) = x^\alpha $
+\end{center}
 В задаче будем использовать следующие параметры: $ T = 10, \alpha = 0.3, \mu = 0.03, \rho = 0.05, \varepsilon = 0.01 $.\\ \\
 Решая уравнения для устойчивого состояния (магистраль) получим
 \begin{center}
-	$ x_* = 6.6076, u_* = 1.1250 $
+	$ x_* = 6.6076, u_* = 0.11250 $
 \end{center}
-\section{Листинг программы}
+\section{Программное решение}
 Для рассчета состояния в следующий момент времени опредилим функции applycontrol на основе ode45 и deq, в качестве переменной для ode45:
-\begin{verbatim}
-	function x = applycontrol(t,k,c)
-	[~, x] = ode45(@(t,k) deq(k,c),[t, t+dt], k);
-	x = x(end,:);
-	end
-	
-	function dk = deq(k,c)
-	dk = c*k^(alpha) - mu*k;
-	end
-\end{verbatim}
-Здесь $ k $ - начальное состояние, c управление, $ t $ - начальный момент времени. Определим функцию mpcsolve для решения задачи методом управления с прогнозирующей моделью. 
+\begin{lstlisting}
+function x = applycontrol(t,k,c)
+[~, x] = ode45(@(t,k) deq(k,c),[t, t+dt], k);
+x = x(end,:);
+end
+
+function dk = deq(k,c)
+dk = c*k^(alpha) - mu*k;
+end
+\end{lstlisting}
+Здесь $ k $ --- начальное состояние, c управление, $ t $ --- начальный момент времени. Определим функцию mpcsolve для решения задачи методом управления с прогнозирующей моделью. 
 
 Чтобы в дальнейшем иметь возможность ее повторного использования для решения других задач реализуем ее в общем виде, независящем от рассматриваемой в данной работе задачи. Для решения задачи на конечном промежутке будем использовать реализованную в Matlab функцию fmincon, минимизирующую функцию при заданных линейных и нелинейных ограничениях. Также определим функцию полной стоимости costfun, суммирующую функции стоимости этапа. Для дальнейшего анализа решения функция mpcsolve возвращает не только построенные оптимальную траекторию и последовательность управлений, но и все траектории и управления для задач на конечном промежутке, полученные при решении задачи на каждой итерации.
-\begin{verbatim}
+\begin{lstlisting}
 function [x, u] = mpcsolve(Nmpc, x0, t0, u0)
 t = t0;
 x = zeros(N + 1,Nmpc);
@@ -79,7 +79,6 @@ x(1,i+1) = x(2,i);
 t = t + dt;
 end
 end
-
 function cost = costfun(x0,t0,u) 
 cost = 0; 
 x = x0; 
@@ -90,39 +89,37 @@ x = applycontrol(t,x,u(i));
 t = t + dt;
 end
 end
-
 function r = stagecost(t, k, c)
 r = (log(1 - c) + log(k^alpha))*...
 (exp(-rho * (t+dt))-exp(-rho * t))/rho;
 end
-
-\end{verbatim}
+\end{lstlisting}
 
 Для получения результата вызовем функцию mpcsolve
-\begin{verbatim}
+\begin{lstlisting}
 [k, c] = mpcsolve(Nmpc, k0, t0, 0.3*ones(N,1));
-\end{verbatim}
+\end{lstlisting}
 \section{Результаты исследования}
 Пускай мы указали в качестве начальных данных Т (горизонт планирования) равным 10, рассматривать нашу задачу мы будем как минимум для четырех различных горизонтов: 10, 30, 50 и 70. В качестве начальных условий везде используется $ x_0 = 1 $, период квантования $ h = 1 $.
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure1.1}
 	\includegraphics[scale=0.4]{figure1.2}
-	\caption{Траектории x и u при T = 10}
+	\caption{Траектории $ x $ и $ u $ при $ T $ = 10}
 \end{figure}
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure2.1}
 	\includegraphics[scale=0.4]{figure2.2}
-	\caption{Траектории x и u при T = 30}
+	\caption{Траектории $ x $ и $ u $ при $ T $ = 30}
 \end{figure}
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure3.1}
 	\includegraphics[scale=0.4]{figure2.2}
-	\caption{Траектории x и u при T = 50}
+	\caption{Траектории $ x $ и $ u $ при $ T $ = 50}
 \end{figure}
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{figure4.1}
 	\includegraphics[scale=0.4]{figure2.2}
-	\caption{Траектории x при T = 70}
+	\caption{Траектории $ x $ и $ u $ при $ T $ = 70}
 \end{figure}
 
 Как мы видим, с увеличением горизонта планирования наша траектория приближается к устойчивому состоянию $ x_* $.\\
@@ -130,3 +127,22 @@ end
 
 На рис. 3.1 --- 3.4 можно наблюдать эффект критерия Лагранжа: программные траектории (штриховые линии) покидают траекторию на
 заключительном участке, чтобы выполнить условие трансверсальности. Понятно, что на построение этих участков численная процедура решения задачи нелинейного программирования вынуждена тратить некоторое дополнительное время.
+\section{Применение метода MPC к решению задачи об экономическом росте с терминальной стоимостью}
+Теперь же, используя теоретические выкладки из п. 2.4, а так же рассчеты, приведенные в прошлой главе решим данную задачу добавив терминальную стоимость. По сути, теперь решаем задачу с критерием типа Майера, а не Лагранжа. Предположив, что терминальная стоимость содержит дисконтирующий множитель $ W(x,\tau + T) = e^{-\rho (\tau + T)}\lambda_*x$ получим следующую прогнозирующую задачу:
+\begin{equation}
+J(x,u) = e^{-\rho (\tau + T)}\lambda_*x + \bigint_{0}^{\infty}e^{-\rho t}[\ln(1-u(t))+\ln f(x(t))]dt \rightarrow \max,
+\end{equation}
+\begin{center}
+	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
+	$ x(0) = x_0, x \ge 0$\\
+\end{center}
+Восплоьзовавшись вычислениями из п. 3.1 перейдем сразу к дискретизированной задаче, которую будем использовать при вычислении в Matlab:
+\begin{equation}
+J(x,u) = e^{-\rho (\tau + T)}\lambda_*x_{i+1} + \sum_{i=0}^{T-1}\dfrac{[\ln(1-u_i)+\ln f(x_i)]}{-\rho} \left(e^{-\rho(i+1)h} -  e^{-\rho ih}\right),
+\end{equation}
+\begin{center}
+	$ \dot{x}(t) = u(t) f(x(t))-\mu x(t),u (t)\in U_\varepsilon = [0 ,1-\varepsilon], $\\
+	$ x(0) = x_0, x \ge 0$\\
+\end{center}
+
+Уточним лишь, что для вычисления $ \lambda_* $ мы используем формулу $ \lambda_* = 1/(x_*^\alpha(1-u_*)) $, где $ (x_*,u_*) $ мы вычислили ранее в п 3.1.
